Fix for https://www.pivotaltracker.com/s/projects/838407/stories/58738708 Changed style logic to match design logic where all colours are the same but the visible different is the opacity between the active and option links

--- a/sites/all/themes/wto-stdf/sass/blocks.scss
+++ b/sites/all/themes/wto-stdf/sass/blocks.scss
@@ -138,10 +138,19 @@
       font-size:0.75em;
       text-decoration: none;
       text-transform:uppercase;
-      color:#668faf;
-      &.active  {
-        color:#00335c;
-      }         
+      color:#00335c;
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=73)";
+      filter: alpha(opacity=73);
+      -moz-opacity: 0.73;
+      -khtml-opacity: 0.73;
+      opacity: 0.73;
+        &.active  {
+          -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+          filter: alpha(opacity=100);
+          -moz-opacity: 1;
+          -khtml-opacity: 1;
+          opacity: 1;
+        }         
     }
   } 
 }
